<resources>
    <string name="app_name">SounDroid</string>
    <string name="app_icon">App Icon</string>

    <string name="import_message">
        Import Playlists from your favourite music streaming apps to listen to on SounDroid!
        Songs can be imported from Spotify. Paste the link to the playlist or album into the
        input box above.
    </string>
    <string name="spotify_warning_message">
        The server will search YouTube for the song in the playlist. However, the song result might
        not be accurate and you may not get the right song. This feature has been tested and has a 70%
        accuracy when converting songs.
    </string>

    <string name="playing_from">Playing From Playlist</string>
    <string name="playing_next_song">Next song</string>
    <string name="playing_play_song">Play song</string>
    <string name="playing_back_song">Back song</string>
    <string name="playing_loop_song">Loop song</string>
    <string name="playing_shuffle_song">Shuffle song</string>
    <string name="song_list_item_cover">Song cover</string>
    <string name="queue_list_item_cover">Song cover</string>
    <string name="playing_default_time">0:00</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_playlist">Playlist</string>
    <string name="navigation_playing">Playing</string>
    <string name="Nil">-</string>
    <string name="searchbar_placeholder">Search for songs or playlists</string>
    <string name="searchbar_back_icon">Searchbar back icon</string>
    <string name="playlist_list_item_cover">Playlist cover</string>
    <string name="playing_click_to_retry">Click to retry</string>
    <string name="playing_error_message">Undefined error message</string>
    <string name="all_songs">All Songs</string>
    <string name="settings">Settings</string>
    <string name="TRANSITION_searchbar">TRANSITION searchbar</string>
    <string name="playlist_cover">Playlist Cover</string>
    <string name="playlists">Playlists</string>
    <string name="create_playlist">Create playlist</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="no_results">No Results</string>
    <string name="connect_to_the_internet">Connect to the internet for online results</string>
    <string name="search">Search</string>
    <string name="no_song_match_found">No song match found</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="download">Download All</string>
    <string name="menu_special_string">⋮</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="save_playlist">Save Playlist</string>
    <string name="done">Done</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="play_playlist">Play Playlist</string>
    <string name="clear_downloads">Clear Downloads</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="clear_queue">Clear Queue</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_icon">Google Icon</string>
    <string name="default_profile_icon">https://exceleratelabs.com/wp-content/uploads/2017/08/default-user.png</string>
    <string name="delete_download">Delete Download</string>
    <string name="edit_song">Edit Song</string>
    <string name="song_artiste">Song Artiste</string>
    <string name="song_title">Song Title</string>
    <string name="import_playlist">Import Playlist</string>
    <string name="enter_playlist_or_album_url">Enter Playlist or Album URL</string>
    <string name="import_">Import</string>
</resources>