<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/ic_splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/sans_regular"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/google_icon"
            android:src="@drawable/ic_google" />

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/sans_bold"
            android:text="@string/sign_in_with_google"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/loading_circle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:alpha="0" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>