<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:fitsSystemWindows="true"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".fragments.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/home_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/home_settings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/home_app_icon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_icon"
        android:elevation="-1dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_settings" />

    <TextView
        android:id="@+id/home_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/carme"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_app_icon" />

    <EditText
        android:id="@+id/home_searchbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/searchbar_placeholder"
        android:background="@drawable/searchbar_background"
        android:focusableInTouchMode="false"
        android:hint="@string/searchbar_placeholder"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:transitionName="@string/TRANSITION_searchbar"
        app:layout_constraintTop_toBottomOf="@id/home_app_name" />

    <TextView
        android:id="@+id/home_download_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="5dp"
        android:text="@string/downloads"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_searchbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layoutAnimation="@anim/recycler_view_animation"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_download_text"
        tools:listitem="@layout/song_list_item" />

</androidx.constraintlayout.motion.widget.MotionLayout>