<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/settings_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/playlists"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/carme"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_image"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/header">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_picture_wrapper"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_picture_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/playing_cover_default" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/usnm_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:fontFamily="@font/fira_sans_regular"
            android:maxLines="1"
            android:text="@string/Nil"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logout_button"
            app:layout_constraintStart_toEndOf="@id/profile_picture_wrapper"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/red"
            android:text="@string/logout"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.4"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/settings_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_layout" />

</RelativeLayout>