<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="?android:attr/selectableItemBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cover_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/song_list_item_cover"
        android:src="@drawable/playing_cover_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundImage5dp" />

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu_image"
        app:layout_constraintStart_toEndOf="@+id/cover_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/Nil"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="106dp" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:text="@string/Nil"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            tools:layout_editor_absoluteX="66dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/menu_image"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/menu"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>