<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/toolbar_background"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:elevation="2dp"
        android:padding="5dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/edit_song_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:elevation="2dp"
        android:fontFamily="@font/carme"
        android:text="@string/edit_song"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_background"
        app:layout_constraintStart_toEndOf="@id/back_image"
        app:layout_constraintTop_toTopOf="@id/toolbar_background" />

    <ImageView
        android:id="@+id/save_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:elevation="2dp"
        android:padding="5dp"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ProgressBar
        android:id="@+id/loading_circle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:alpha="0"
        android:elevation="2dp"
        android:indeterminateTint="?attr/colorControlActivated"
        app:layout_constraintBottom_toBottomOf="@id/save_image"
        app:layout_constraintEnd_toEndOf="@id/save_image"
        app:layout_constraintStart_toStartOf="@id/save_image"
        app:layout_constraintTop_toTopOf="@id/save_image" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cover_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/playing_cover_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_background"
        app:shapeAppearanceOverlay="@style/shapeableImageViewStyle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/song_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/artiste_text_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/song_artiste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/artiste_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>