<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:clickable="true"
    android:fitsSystemWindows="true"
    tools:context=".Fragments.SearchFragment">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/searchbar_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/header_back_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/searchbar_back_icon"
                android:padding="5dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnBackground" />

            <EditText
                android:id="@+id/header_text_editor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:autofillHints="@string/searchbar_placeholder"
                android:background="@drawable/searchbar_background"
                android:hint="@string/searchbar_placeholder"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp"
                android:transitionName="@string/TRANSITION_searchbar"
                app:layout_constraintEnd_toStartOf="@+id/header_loading_circle"
                app:layout_constraintStart_toEndOf="@+id/header_back_image">

                <requestFocus />
            </EditText>

            <ProgressBar
                android:id="@+id/header_loading_circle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:indeterminateTint="?attr/colorControlActivated"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:tabMode="fixed"
        app:tabTextColor="?attr/colorOnBackground" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>